# squirrel_shooter

./: .gitattributes  .gitignore  PI_SETUP_LOG.md  README.md  package.json  pull-and-start.sh  pyproject.toml  start.sh
Misc/: start squirrel shooter.txt
config/: default.yaml
deploy/systemd/: squirrel-squirter.service
docs/: ROADMAP.md
scripts/: preview_dashboard.py
src/squirrel_shooter/: __init__.py  app.py  camera_capture.py  camera_common.py  camera_diagnostic.py  camera_preview.py  camera_service.py  classifier.py  classifier_setup.py  config.py  detection.py  diagnostics.py  event_report.py  event_storage.py  files.py  frame_selection.py  modes.py  motion.py  motion_runtime.py  motion_watch.py  valve.py  vision_service.py  watch_detection.py  web_dashboard.py
src/squirrel_shooter/static/: console.css  console.js  dashboard.css
src/squirrel_shooter/templates/: _gallery.html  base.html  captures.html  classifier_review.html  dashboard.html  events.html
tests/: conftest.py  test_classifier.py  test_config.py  test_detection.py  test_event_workflow.py  test_frame_selection.py  test_helpers.py  test_shared_runtime.py  test_systemd_service.py  test_vision_service.py  test_watch_detection.py  test_web_dashboard.py
