[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "squirrel-shooter"
version = "0.1.0"
description = "Camera-first foundation for a Raspberry Pi garden squirrel deterrent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4",
    "numpy>=1.24,<3",
    "opencv-python>=4.8,<5",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
squirrel_shooter = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
